--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   display: flex;
-  padding: 20px;
+  width: 100%;
+  height: 100%;
   flex-direction: column;
-  background-color: #282c34;
   color: white;
   align-content: center;
   justify-content: center;
