--- a/src/Location/Location.css
+++ b/src/Location/Location.css
@@ -1,7 +1,7 @@
 .Location {
-    display: column;
+    /* display: column;
     padding: 20px;
-    flex-direction: row;
+    flex-direction: row; */
 }
 
 .row {
