--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,10 @@
   justify-content: center;
   align-items: center;
 }
+
+.trying-to-center {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
