--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
+html {
+  height: 100%;
+  width: 100%;
+  display: flex;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+  display: flex;
+}
+
+h1 {
+  color:black;
+  font-size: 60px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +22,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  width: 100%;
+  display: flex;
 }
 
 code {
